# playground

./: CHANGELOG.md  LICENSE  README.md  playground.cabal
app/: Main.hs
benchmark/: Main.hs
src/: Playground.hs
test/: Spec.hs
