cabal-version:       2.4
name:                playground
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See [README.md](https://github.com/beauvankirk/playground#playground) for more details.
homepage:            https://github.com/beauvankirk/playground
bug-reports:         https://github.com/beauvankirk/playground/issues
license:             MIT
license-file:        LICENSE
author:              Beau Van Kirk
maintainer:          Beau Van Kirk <beauvankirk@gmail.com>
copyright:           2020 Beau Van Kirk
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.1

source-repository head
  type:                git
  location:            https://github.com/beauvankirk/playground.git

common common-options
  build-depends:       base ^>= 4.14.0.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Playground

executable playground
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       playground
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite playground-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       playground
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark playground-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       playground
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
